# gr-polarwrap

./: .gitignore  .zenodo.json  CMakeLists.txt  MANIFEST.md
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml
.conda/: README.md  conda-forge.yml
.conda/recipe/: conda_build_config.yaml  meta.yaml
.github/workflows/: check-formatting.yml
apps/: CMakeLists.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  polarwrapConfig.cmake
docs/: CMakeLists.txt  README.md  README.polarwrap
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py  update_pydoc.py
examples/: .gitignore  gfdm_fast_sync_demo.grc  gfdm_fast_sync_demo.py  hier_polar_decoder.grc  hier_polar_encoder.grc  polarwrapper_example.py  wrapper_example.grc
grc/: CMakeLists.txt  variable_polarwrap_decoderwrap.block.yml  variable_polarwrap_decoderwrap.xml  variable_polarwrap_encoderwrap.block.yml  variable_polarwrap_encoderwrap.xml
include/polarwrap/: CMakeLists.txt  (+3 more)
lib/: CMakeLists.txt  decoderwrap.cc  encoderwrap.cc  qa_polarwrap.cc  qa_polarwrap.h  test_polarwrap.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  configurator_polar.py  qa_decoder_kernel.py  qa_encoder_kernel.py
python/bindings/: CMakeLists.txt  decoderwrap_python.cc  encoderwrap_python.cc  python_bindings.cc
python/bindings/docstrings/: decoderwrap_pydoc_template.h  encoderwrap_pydoc_template.h
swig/: CMakeLists.txt  polarwrap_swig.i
(+6 files in other folders)
